--- a/index.html
+++ b/index.html
@@ -21,12 +21,29 @@
         <div>
             <h3>Top products</h3>
             <section id="productList">
-                <a href="iphone.html">IPhone 15 Pro Max</a>
-                <a href="mercedes.html">Mercedes banz Class X10</a>
-                <a href="headset.html">Boat Wireless Headset</a>
-                <a href="book.html">Rich dad and poor dad</a>
+                <div id="loader">Loading...</div>
             </section>
         </div>
     </main>
+    <script>
+
+        fetch("./products.json")
+            .then((res => res.json()))
+            .then((products => {
+                const productList = document.getElementById("productList")
+                const loader = document.getElementById("loader")
+                loader.remove()
+
+                products.map(product => {
+                    const productLink = document.createElement("a")
+                    productLink.href = `product.html?id=${product.id}`
+                    productLink.innerText = product.name
+
+                    productList.appendChild(productLink)
+                })
+            }))
+            .catch(error => console.error('Error fetching product data:', error));
+    </script>
 </body>
+
 </html>
