--- a/product.html
+++ b/product.html
@@ -39,8 +39,10 @@
                 const product = products.filter((product => product.id === id))[0]
                 const name = document.getElementById("name")
                 const price = document.getElementById("price")
+                const image = document.getElementById("image")
                 name.innerText = product.name
                 price.innerText = `${product.price} $`
+                image.src = `${product?.image}`
                 document.title = `${product.name} - Top Product`
             }))
             .catch((error) => console.error("Error fetching product data:", error))
